--- a/index.html
+++ b/index.html
@@ -5,24 +5,25 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta http-equiv="X-UA-Compatible" content="ie=edge">
-	<link href="https://fonts.googleapis.com/css?family=Ubuntu:400,500,700&amp;subset=cyrillic" rel="stylesheet">	
+	<link href="https://fonts.googleapis.com/css?family=Ubuntu:400,500,700&amp;subset=cyrillic" rel="stylesheet">
 	<link rel="stylesheet" href="./css/bootstrap-grid.min.css">
 	<link rel="stylesheet" href="./css/main.css">
 	<title>AC Power</title>
 </head>
+
 <body>
-	<header class="main-menu no-gutters">
+	<header class="main-menu">
 		<nav class="navbar">
-			 <a class="menu-btn" id="m_menu">
+			<a class="menu-btn" id="m_menu">
 				<span></span>
 			</a>
 			<div class="main-navigation" id="navigation">
 				<a class="navbar-brand" href="#">
 					<svg class="svg_logo" version="1.1" id="sl_main" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"
-					x="0px" y="0px" viewBox="0 0 710 232" style="enable-background:new 0 0 710 232;" xml:space="preserve">
-<g>
-	<g>
-		<path class="st_0" d="M30.6,170.7l-4.3,19.2l-4.6-19.2h-7.5L12,198.5h5.7l0.6-11.2c0.1-1.8,0.2-3.8,0.2-6c0-2-0.1-3.9-0.2-5.5
+					 x="0px" y="0px" viewBox="0 0 710 232" style="enable-background:new 0 0 710 232;" xml:space="preserve">
+						<g>
+							<g>
+								<path class="st_0" d="M30.6,170.7l-4.3,19.2l-4.6-19.2h-7.5L12,198.5h5.7l0.6-11.2c0.1-1.8,0.2-3.8,0.2-6c0-2-0.1-3.9-0.2-5.5
 			l5,19.7H29l4.7-19.7c0,0.6,0,1.5,0,2.7c0,2.4,0.1,5.2,0.3,8.6l0.6,11.3h5.8l-2.1-27.8H30.6z M53.7,176.5c-2.1,0-3.9,0.5-5.5,1.4
 			c-1.5,0.9-2.7,2.3-3.5,4c-0.8,1.7-1.2,3.7-1.2,5.9c0,3.5,0.9,6.3,2.7,8.3c1.8,2,4.3,3,7.5,3c2.1,0,3.9-0.5,5.4-1.4
 			c1.5-0.9,2.7-2.3,3.5-4c0.8-1.7,1.2-3.7,1.2-5.9c0-3.5-0.9-6.3-2.7-8.3C59.4,177.5,56.9,176.5,53.7,176.5z M56.8,193.2
@@ -108,148 +109,95 @@
 			c-4.9,0-9.3-1.1-12.9-3.3c-3.7-2.2-6.5-5.3-8.5-9.2c-2-3.9-3-8.5-3-13.8c0-4.8,1.1-9.2,3.2-13.1c2.1-3.9,5-7.1,8.6-9.4
 			c3.6-2.3,7.5-3.4,11.6-3.4c6.1,0,12.1,2.2,17.9,6.6l6.3-15.2c-3.2-2-6.9-3.7-11.1-5c-4.2-1.3-8.8-2-13.7-2
 			c-7.8,0-14.7,1.8-20.7,5.4c-6,3.6-10.6,8.6-13.9,15c-3.3,6.4-5,13.7-5,21.9c0,7.5,1.7,14.3,5,20.5c3.3,6.2,8.1,11.2,14.4,14.9
-			c6.3,3.7,13.6,5.5,22.1,5.5c5.3,0,10.2-0.8,14.7-2.5C147.6,125,150.9,123.3,153,121.6z"/>
-	</g>
-</g>
-<path class="st_1" d="M213,13.6l38.7-0.4l-17.5,34.9l50.2,0l-85.1,106l4.3-66.6h-32.3L213,13.6z"/>
-</svg>
+			c6.3,3.7,13.6,5.5,22.1,5.5c5.3,0,10.2-0.8,14.7-2.5C147.6,125,150.9,123.3,153,121.6z" />
+							</g>
+						</g>
+						<path class="st_1" d="M213,13.6l38.7-0.4l-17.5,34.9l50.2,0l-85.1,106l4.3-66.6h-32.3L213,13.6z" />
+					</svg>
 
 				</a>
 				<div class="main-navigation-container" id="m_memu_text">
-				<ul class="navbar-links">
-					<li class="nav-link">
-						<a href="#" class="nav-a">Электрика</a>
-					</li>
-					<li class="nav-link">
-						<a href="#" class="nav-a">Слаботочные системы</a>
-					</li>
-					<li class="nav-link">
-						<a href="#" class="nav-a">О нас</a>
-					</li>
-					<li class="nav-link">
-						<a href="#" class="nav-a">Мастера</a>
-					</li>
-					<li class="nav-link">
-						<a href="#" class="nav-a">Контакты</a>
-					</li>
+					<ul class="navbar-links">
+						<li class="nav-link">
+							<a href="#" class="nav-a">Электрика</a>
+						</li>
+						<li class="nav-link">
+							<a href="#" class="nav-a">Слаботочные системы</a>
+						</li>
+						<li class="nav-link">
+							<a href="#" class="nav-a">О нас</a>
+						</li>
+						<li class="nav-link">
+							<a href="#" class="nav-a">Мастера</a>
+						</li>
+						<li class="nav-link">
+							<a href="#" class="nav-a">Контакты</a>
+						</li>
 
-				</ul>
-				<a href="form.html"><button href="./404.html" class="main-menu-btn" type="button">Связаться</button></a>
+					</ul>
+					<a href="form.html"><button href="./404.html" class="main-menu-btn" type="button">Связаться</button></a>
+				</div>
 			</div>
-		</div>
 		</nav>
 	</header>
-	<main class="container-fluid no-gutters main-container">
-		<div class="row header-row">
-			<div class="col-12 header-row-one">
+	<main class="main-container">
+		<div class="header-row">
+			<div class="header-row-one">
 				<h1 class="header-row-text align-middle">power in your house</h1>
-				<p class="header-row-text-descr">Lorem ipsum dolor sit amet consectetur adipisicing elit.<br> Recusandae iste optio perferendis.<br>Lorem ipsum dolor sit amet
+				<p class="header-row-text-descr">Lorem ipsum dolor sit amet consectetur adipisicing elit.<br> Recusandae iste optio
+					perferendis.<br>Lorem ipsum dolor sit amet
 					Culpa adipisci .</p>
 				<a href="/404.html"><button class="contact-us">Подробнее</button></a>
 			</div>
+			<div id="SVGMainHero">
+				<figure class="ie-main-hero">
+					<svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 1374.7 1083.6"
+					 style="enable-background:new 0 0 1374.7 1083.6;" xml:space="preserve" class="injected-svg js-svg-injector">
+						<path class="main-hero" opacity=".1" d="M285.2,170.1c-94.5,8.6-181.2,57.4-235.9,134.8C-34.7,423.6-54.5,621.5,349,879.8  c636.5,407.6,600,9.3,591.9-47.4c-0.8-5.5-1.4-11.1-2-16.6l-34.2-374.1C888.4,262,729.2,129.6,549.4,146L285.2,170.1z"></path>
+						<g>
+							<defs>
+								<path id="mainHeroBlock1" d="M1374.7,0H687.6l-278,279.7c-150,150.9-148.1,395.3,4.4,543.8l0,0C554.1,960,774.9,968.7,925.4,843.6    l449.3-373.4V0z"></path>
+							</defs>
+							<clipPath id="mainHeroBlock2">
+								<use xlink:href="#mainHeroBlock1" ></use>
+							</clipPath>
+							<g transform="matrix(1 0 0 1 0 0)" style="clip-path:url(#mainHeroBlock2);">
+								<image id="SVGMainHeroImg1" class="SVGMainHeroImg1" width="750" height="750" xlink:href="./img/img_bg2.jpg"
+								 transform="matrix(1.4462 0 0 1.4448 290.09 0)"></image>
+							</g>
+						</g>
+					</svg>
+				</figure>
+			</div> 
 		</div>
-		<section class="row site-content">
-		<div class="row justify-content-center electriс">
-			<div class="col-12">
-			<h2 class="electric-tittle">lorem</h2>
-			<p class="electric-descr"> Lorem ipsum, dolor sit amet consectetur adipisicing elit. Minus, accusantium, earum ipsum velit laudantium incidunt tempora quaerat enim voluptatibus blanditiis repellat! Et vero numquam sed facere dolorem reiciendis omnis quo eligendi magnam cumque nemo, sunt, vel dolorum accusantium tenetur assumenda? Impedit minima laudantium fugiat modi, sed consequuntur iusto dignissimos harum molestiae. Pariatur nostrum vero minima ea molestias. Laboriosam veniam dignissimos vitae explicabo laborum, tenetur ipsa molestias ex iure debitis consequatur adipisci voluptatibus, nostrum ratione eaque unde voluptates. Obcaecati sapiente, asperiores praesentium ex ullam magnam quo ea harum natus eaque nesciunt iure aut. Obcaecati ab veritatis, sit sint recusandae voluptatum ipsam!Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsa nobis molestiae, quibusdam tempore, et provident sed nulla accusamus obcaecati doloribus voluptatum distinctio alias maiores odit natus ipsum. Atque vero eos cumque magnam, quae eveniet, qui officia soluta, quam neque nulla?</p>
-		</div>
-	</div>
-	
-</section>
-<section class="row justify-content-center" id="up_page">
-	<div class="element-card">
-		<img src="./img/hugo-sousa-383214-unsplash-min.jpg" alt="" class="slider_element_img">
-		<div class="element-card_text_container">
-			<h3 class="element-card_tittle">Lorem, ipsum dolor.</h3>
+		<section class="site-content">
+			<div class="justify-content-center electriс">
+				<h2 class="electric-tittle">lorem</h2>
+				<p class="electric-descr"> Lorem ipsum, dolor sit amet consectetur adipisicing elit. Minus, accusantium, earum
+					ipsum velit laudantium incidunt tempora quaerat enim voluptatibus blanditiis repellat! Et vero numquam sed facere
+					dolorem reiciendis omnis quo eligendi magnam cumque nemo, sunt, vel dolorum accusantium tenetur assumenda?
+					Impedit minima laudantium fugiat modi, sed consequuntur iusto dignissimos harum molestiae. Pariatur nostrum vero
+					minima ea molestias. Laboriosam veniam dignissimos vitae explicabo laborum, tenetur ipsa molestias ex iure
+					debitis consequatur adipisci voluptatibus, nostrum ratione eaque unde voluptates. Obcaecati sapiente, asperiores
+					praesentium ex ullam magnam quo ea harum natus eaque nesciunt iure aut. Obcaecati ab veritatis, sit sint
+					recusandae voluptatum ipsam!Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsa nobis molestiae,
+					quibusdam tempore, et provident sed nulla accusamus obcaecati doloribus voluptatum distinctio alias maiores odit
+					natus ipsum. Atque vero eos cumque magnam, quae eveniet, qui officia soluta, quam neque nulla?</p>
+			</div>
 
-			<span class="slider_element_text">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Laboriosam, amet.</span>
-			<a href="" class="card-more"><button class="element_button">More</button></a>
-		</div>
-	</div>
-	<div class="element-card">
-		<img src="./img/photo-1471871480126-59ab253c49e9-min.jpg" alt="" class="slider_element_img">
-		<div class="element-card_text_container">
-			<h3 class="element-card_tittle">Lorem, ipsum dolor.</h3>
+		</section>
+		<section class="justify-content-center" id="up_page">
+			<div class="element-card">
+				<img src="./img/hugo-sousa-383214-unsplash-min.jpg" alt="" class="slider_element_img">
+				<div class="element-card_text_container">
+					<h3 class="element-card_tittle">Lorem, ipsum dolor.</h3>
+					<span class="slider_element_text">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Laboriosam, amet.</span>
+					<a href="" class="card-more"><button class="element_button">More</button></a>
+				</div>
+		</section>
 
-			<span class="slider_element_text">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Laboriosam, amet.</span>
-			<a href="#" class="card-more"><button class="element_button">More</button></a>
-		</div>
-	</div>
-	<div class="element-card">
-		<img src="./img/hugo-sousa-383214-unsplash-min.jpg" alt="" class="slider_element_img">
-		<div class="element-card_text_container">
-			<h3 class="element-card_tittle">Lorem, ipsum dolor.</h3>
 
-			<span class="slider_element_text">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Laboriosam, amet.</span>
-			<a href="#" class="card-more"><button class="element_button">More</button></a>
-		</div>
-	</div>
-	<div class="element-card">
-		<img src="./img/hugo-sousa-383214-unsplash-min.jpg" alt="" class="slider_element_img">
-		<div class="element-card_text_container">
-			<h3 class="element-card_tittle">Lorem, ipsum dolor.</h3>
-
-			<span class="slider_element_text">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Laboriosam, amet.</span>
-			<a href="#" class="card-more"><button class="element_button">More</button></a>
-		</div>
-	</div>
-	<div class="element-card">
-		<img src="./img/hugo-sousa-383214-unsplash-min.jpg" alt="" class="slider_element_img">
-		<div class="element-card_text_container">
-			<h3 class="element-card_tittle">Lorem, ipsum dolor.</h3>
-
-			<span class="slider_element_text">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Laboriosam, amet.</span>
-			<a href="#" class="card-more"><button class="element_button">More</button></a>
-		</div>
-	</div>
-	<div class="element-card">
-		<img src="./img/hugo-sousa-383214-unsplash-min.jpg" alt="" class="slider_element_img">
-		<div class="element-card_text_container">
-			<h3 class="element-card_tittle">Lorem, ipsum dolor.</h3>
-
-			<span class="slider_element_text">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Laboriosam, amet.</span>
-			<a href="#" class="card-more"><button class="element_button">More</button></a>
-		</div>
-	</div>
-	<div class="element-card">
-		<img src="./img/hugo-sousa-383214-unsplash-min.jpg" alt="" class="slider_element_img">
-		<div class="element-card_text_container">
-			<h3 class="element-card_tittle">Lorem, ipsum dolor.</h3>
-
-			<span class="slider_element_text">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Laboriosam, amet.</span>
-			<a href="#" class="card-more"><button class="element_button">More</button></a>
-		</div>
-	</div>
-	<div class="element-card">
-		<img src="./img/photo-1471871480126-59ab253c49e9-min.jpg" alt="" class="slider_element_img">
-		<div class="element-card_text_container">
-			<h3 class="element-card_tittle">Lorem, ipsum dolor.</h3>
-
-			<span class="slider_element_text">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Laboriosam, amet.</span>
-			<a href="#" class="card-more"><button class="element_button">More</button></a>
-		</div>
-	</div>
-	<div class="element-card">
-		<img src="./img/photo-1471871480126-59ab253c49e9-min.jpg" alt="" class="slider_element_img">
-		<div class="element-card_text_container">
-			<h3 class="element-card_tittle">Lorem, ipsum dolor.</h3>
-
-			<span class="slider_element_text">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Laboriosam, amet.</span>
-			<a href="#" class="card-more"><button class="element_button">More</button></a>
-		</div>
-	</div>
-	<div class="element-card">
-		<img src="./img/photo-1471871480126-59ab253c49e9-min.jpg" alt="" class="slider_element_img">
-		<div class="element-card_text_container">
-			<h3 class="element-card_tittle">Lorem, ipsum dolor.</h3>
-
-			<span class="slider_element_text">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Laboriosam, amet.</span>
-			<a href="#" class="card-more"><button class="element_button">More</button></a>
-		</div>
-	</div>
-									</section>
-</main>
+	</main>
 
 	<script src="./js/main.js"></script>
 </body>
