--- a/index.html
+++ b/index.html
@@ -174,7 +174,8 @@
 			</div>
 		</div>
 		<section class="site-content">
-			<section class="about-section">
+			<section class="about">
+				<div class="row about-section">
 				<div class="about-section-img">
 					<div class="about-section-img-2col">
 						<img class="col-img-left shadow-img" src="./img/2_about.jpg.png" alt="">
@@ -196,8 +197,10 @@
 								сроки с непревзойденным качеством. Все профессионалы имеюют ряд лицензий на проведение 
 								всех сопутствующих видов работ. </p>
 				</div>
+			</div>
 			</section>
 			<section class="bads">
+				<div class="row-center">
 				<h2 class="bads-tiitle">
 						В чем <span class="focus-text">риск</span> нанимать<br>
 						<span class="focus-text">непрофессионала</span> ?
@@ -270,9 +273,10 @@
 									</div>
 								</div>
 				</div>
-
+			</div>
 			</section>
 			<section class="services">
+				<div class="row-center">
 				<h2 class="services-tittle">
 						Основные <span class="focus-text">виды детельности</span>
 				</h2>
@@ -402,6 +406,7 @@
 															</div>
 														</div>
 				</div>
+		</div>
 			</section>
 
 		</section>
