--- a/index.html
+++ b/index.html
@@ -432,12 +432,19 @@
 						<h2 class="contact-section-tittle">
 								Нужна наша <span class="focus-text">помощь</span> ?
 							</h2>
-					<input class="text-input" name="entry.742532386" type="text" placeholder="Монтаж проводки в доме" type="text" required pattern="^[A-Za-zА-Яа-яЁё\s]+$"/>
+							<div class="contact_us_lable">
+					<input id="user_name" class="text-input text-input-first" name="entry.742532386" type="text" required pattern="^[A-Za-zА-Яа-яЁё\s]+$"/>
+					<label class="form-label-first" for="user_name">Ваше имя</label>
+				</div>
+					<div class="contact_us_lable">
+					<input class="text-input" name="entry.1558941179" type="email" required/>
+				</div>
+					<div class="contact_us_lable">
 					<input class="text-input" name="entry.1558941179" type="email" required />
-					<input class="text-input" name="entry.1558941179" type="email" required />
-		
-		
-					<input class="push" type="submit" value="Send" />
+				</div>
+				<div class="contact_us_lable">
+					<input class="push text-input-first" type="submit" value="Send" />
+				</div>
 		
 		</form>
 </div>
