--- a/index.html
+++ b/index.html
@@ -472,16 +472,36 @@
 	</a>
 </div>
 		</section>
-		<!-- <section class="justify-content-center" id="up_page">
-			<div class="element-card">
-				<img src="./img/hugo-sousa-383214-unsplash-min.jpg" alt="" class="slider_element_img">
-				<div class="element-card_text_container">
-					<h3 class="element-card_tittle">Lorem, ipsum dolor.</h3>
-					<span class="slider_element_text">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Laboriosam, amet.</span>
-					<a href="" class="card-more"><button class="element_button">More</button></a>
-				</div>
-		</section> -->
 
+
+		<section class="work">
+			<div class="row-center">
+			<h2 class="work-tittle">
+					<span class="focus-text">Как мы работаем  </span>с клиентами?
+			</h2>
+			<div class="work-container">
+				<div class="worc-descr-container">
+					<h3 class="worc-descr-container-tiitle">Lorem ipsum dolor sit.</h3>
+					<p class="worc-descr-container-descr">
+						Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quam facilis error ratione! Iste maiores deleniti ipsam omnis a error, labore ex laboriosam quisquam, aliquam esse architecto fugiat illum! In, architecto iste sed maxime minima voluptatum, esse sunt at blanditiis quod aspernatur labore exercitationem eius aliquid adipisci totam quisquam! Sed ad deserunt dolore! Quas blanditiis ipsa veritatis deserunt odio perspiciatis doloribus.
+					</p>
+				</div>
+				<div class="work-img-container">
+						<div class="work-img-container-left">
+							<img src="./img/work-left.png" alt="" class="work-img-container-left-img">
+						</div>
+						<div class="work-img-container-right">
+							<div class="work-img-container-right-up">
+								<img src="./img/work-right-up.png" alt="" class="work-img-container-right-up-img">
+							</div>
+							<div class="work-img-container-right-down">
+								<img src="./img/work-right-down.png" alt="" class="work-img-container-right-down-img">
+							</div>
+						</div>
+				</div>
+				</div>
+				</div>
+				</section>
 
 	</main>
 
