--- a/index.html
+++ b/index.html
@@ -119,23 +119,23 @@
 				<div class="main-navigation-container" id="m_memu_text">
 					<ul class="navbar-links">
 						<li class="nav-link">
-							<a href="#" class="nav-a">Электрика</a>
+							<a href="#electric" class="nav-a">Электрика</a>
 						</li>
 						<li class="nav-link">
-							<a href="#" class="nav-a">Слаботочные системы</a>
+							<a href="#easyelectric" class="nav-a">Слаботочные системы</a>
 						</li>
 						<li class="nav-link">
-							<a href="#" class="nav-a">О нас</a>
+							<a href="#ac-about" class="nav-a">О нас</a>
 						</li>
 						<li class="nav-link">
-							<a href="#" class="nav-a">Мастера</a>
+							<a href="#worc" class="nav-a">Как мы работаем</a>
 						</li>
 						<li class="nav-link">
-							<a href="#" class="nav-a">Контакты</a>
+							<a href="#ac-contacts" class="nav-a">Контакты</a>
 						</li>
 
 					</ul>
-					<a href="form.html"><button href="./404.html" class="main-menu-btn" type="button">Связаться</button></a>
+					<a href="#contact-us"><button class="main-menu-btn" type="button">Связаться</button></a>
 				</div>
 			</div>
 		</nav>
@@ -148,7 +148,7 @@
 				<p class="header-row-text-descr">Проведение работ по монтажу электрики и<br> 
 					слаботочных систем для обширного<br> 
 					спектра направлений.</p>
-				<a href="/404.html"><button class="contact-us">Узнать больше</button></a>
+				<a href="#ac-about"><button class="contact-us">Узнать больше</button></a>
 			</div>
 			<div class="hero-social">
 					<a href="" class="social_vicon v_social_icon_effect">
@@ -173,7 +173,8 @@
 				<span class="mause"></span>
 			</div>
 		</div>
-		<section class="site-content">
+		<span id="ac-about" style="margin-top:-80px; padding-bottom:80px;"></span>
+		<section  class="site-content">
 			<section class="about">
 				<div class="about-section">
 				<div class="about-section-img">
@@ -181,7 +182,7 @@
 						<img class="col-img" src="./img/about-img.png" alt="">
 					</div>
 				</div>
-				<div class="about-section-text">
+				<div  class="about-section-text">
 <h2 class="about-section-text-tiitle"><span class="focus-text">Мы</span> <span class="focus-text">занимаемся</span> монтажем 
 		слаботочных систем и электрики</h2>
 				<p class="about-section-text-descr">AC Power команда профессионалов знающая свое дело. Мы оказываем услуги в различных 
@@ -215,6 +216,7 @@
 			</div>
 			</div>
 			</section>
+			<span id="electric" style="margin-top:-80px; padding-bottom:80px;"></span>
 			<section class="services">
 				<div class="row-center">
 				<h2 class="services-tittle">
@@ -283,10 +285,10 @@
 												<a href="" class="servise-link">подробнее</a>
 											</div>
 										</div>
-
+										<span id="easyelectric" style="margin-top:-80px; padding-bottom:80px;"></span>
 										<div class="service-card">
 												<div class="service-img">
-												
+																										
 												</div>
 												<div class="service-text">
 													<h3 class="servise-tiitle">Локальные сети</h3>
@@ -349,7 +351,7 @@
 		</div>
 			</section>
 
-			<section class="contact-section">
+			<section  class="contact-section">
 				<div class="row contact-section-content">
 							<img src="./img/contact-form-img.png" alt="" class="contact-section-col-left-img">
 				<form class="form-section-form-container" action="">
@@ -397,7 +399,7 @@
 </div>
 		</section>
 
-
+<span id="worc" style="margin-top:-80px; padding-bottom:80px;"></span>
 		<section class="work">
 			<div class="row-center">
 			<h2 class="work-tittle">
@@ -537,7 +539,7 @@
 					</div>
 					</section>
 
-
+		<span id="contact-us" style="margin-top:-80px; padding-bottom:80px;"></span>
 			<section class="contact-section">
 				<div class="row contact-section-content">
 							<img src="./img/contact-form-img.png" alt="" class="contact-section-col-left-img">
@@ -558,7 +560,7 @@
 					<label class="form-label" for="subject_footer">Чем вам помочь?</label>
 				</div>
 				<div class="contact_us_lable">
-					<input class="push" type="submit" value="Отправить" />
+					<button class="push" type="submit" value="Отправить">Отправить</button>
 
 				</div>
 		
@@ -567,8 +569,8 @@
 </div>
 		</section>
 
-
-		<section class="contacts">
+		<span id="ac-contacts" style="margin-top:-80px; padding-bottom:80px;"></span>
+		<section  class="contacts">
 				<div class="row-center">
 				<h2 class="contacts-tiitle">
 					<span class="focus-text">Контакты </span>или как с нами связаться
