--- a/index.html
+++ b/index.html
@@ -223,11 +223,11 @@
 						Основные <span class="focus-text">виды</span> <span class="focus-text">детельности</span>
 				</h2>
 				<div class="servis-container">
-					<div class="service-card">
+					<div id="service-1" class="service-card">
 						<div class="service-img">
 						
 						</div>
-						<div id="service-1" class="service-text">
+						<div class="service-text">
 							<h3 class="servise-tiitle">Монтаж электрики</h3>
 							<p class="servise-text-descr">Наружная (уличная) и внутродомовая 
 									прокладка электро - инфроструктуры. </p>
